# Real-Twin-XL

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  Tutorial_dev.ipynb  pyproject.toml  realtwin_config.yaml  requirements.txt  tutorial_dev.md  tutorial_dev.py
.github/workflows/: build_wheels.yml  pylint.yml
datasets/chattanooga/: MatchupTable.xlsx
datasets/chattanooga/output/OpenDrive/: chatt.net.xml  edges.edg.xml
datasets/chattanooga/output/SUMO/: chatt.rou.xml  chatt.turn.xml
datasets/example1/: MatchupTable.xlsx
datasets/example1/output/OpenDrive/: chatt.net.xml  chatt.xodr  edges.edg.xml  nodes.nod.xml
datasets/example1/output/SUMO/: chatt.flow.xml  chatt.net.xml  chatt.rou.xml  chatt.turn.xml
datasets/example2/: MatchupTable.xlsx
datasets/example2/output/OpenDrive/: chatt.xodr  edges.edg.xml
datasets/example2/output/SUMO/: chatt.rou.xml
docs/: realtwin_dev_framework.drawio  realtwin_dev_framework_cali.drawio
docs/code_evaluation/: how_to.md
docs/source/: conf.py  requirements_dev.txt  s5defs.txt
docs/source/_build/: .buildinfo  .buildinfo.bak  .special.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_build/.doctrees/: .special.doctree  environment.pickle  index.doctree
docs/source/_build/_modules/: index.html
docs/source/_build/_sources/: index.rst.txt
docs/source/_build/_static/: documentation_options.js  realtwin_css.css
docs/source/_build/pages/: .special.html  acknowledgements.html  api.html  install.html  intro.html  realtwin_generation.html  realtwin_prepare.html  realtwin_simulator.html  support.html
docs/source/_static/: chat_net.pptx
docs/source/pages/: api.rst  create_api.py  intro.rst  realtwin_generation.rst  realtwin_prepare.rst  realtwin_simulator.rst  support.rst
docs/source/pages/api/: realtwin.func_lib.AbstractScenario.rst  realtwin.func_lib.OSMRoad.rst  realtwin.func_lib.OpenDriveNetwork.rst  realtwin.func_lib.SimPrep.rst  realtwin.func_lib.TurnInflowCalib.rst  realtwin.func_lib.cali_aimsun.rst  realtwin.func_lib.cali_sumo.rst  realtwin.func_lib.cali_vissim.rst  realtwin.func_lib.get_bounding_box_from.rst  realtwin.func_lib.install_sumo_macos.rst  realtwin.func_lib.install_sumo_windows.rst  realtwin.func_lib.is_aimsun_installed.rst  realtwin.func_lib.load_input_config.rst  realtwin.func_lib.load_traffic_volume.rst  realtwin.util_lib.download_single_file_from_web.rst  realtwin.util_lib.venv_create.rst  realtwin.util_lib.venv_delete.rst
realtwin/: __init__.py  _realtwin.py
realtwin/data_lib/: __init__.py  data_lib_config.py  realtwin_config.yaml
realtwin/func_lib/: __init__.py
realtwin/func_lib/_a_install_simulator/: __init__.py  check_sim_env.py  inst_sumo.py
realtwin/func_lib/_b_load_inputs/: __init__.py  loader_config.py
realtwin/func_lib/_c_abstract_scenario/: __init__.py  _abstractScenario.py  _application.py  _control.py  _network.py  _traffic.py  rt_demand_generation.py  rt_matchup_table_generation.py
realtwin/func_lib/_d_concrete_scenario/: __init__.py  _behavior.py  _concreteScenario.py  _demand.py  _route.py  _supply.py  _trafficControl.py
realtwin/func_lib/_e_simulation/: __init__.py  _aimsun.py  _generate_simulation.py  _sumo.py  _vissim.py
realtwin/func_lib/_f_calibration/: __init__.py  calibration_aimsun.py  calibration_sumo.py  calibration_vissim.py
realtwin/func_lib/_f_calibration/algo_sumo/: cali_behavior.py  cali_turn_inflow.py  util_cali_behavior.py  util_cali_turn_inflow.py
realtwin/func_lib/_g_analyzer/: __init__.py
realtwin/func_lib/_h_vis/: __init__.py
realtwin/util_lib/: __init__.py  check_abstract_scenario_inputs.py  create_config.py  create_venv.py  download_elevation_tif.py  download_file_from_web.py  find_exe_from_PATH.py
tests/: proj_add_sys_path.py  proj_std_check.py  test_realtwin.py  test_sim_env.py
tests/utils_lib/: test_download_from_web.py  test_util_find_exectuable.py
(+140 files in other folders)
